--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
     </script>
     <script src="datepicker.mobile.js"></script>
 </head>
+
 <body onload="initialize()">
 <div id="map_canvas"
      style="position: absolute; left: 0px; top: 0px; overflow: hidden; width: 100%; height: 100%; z-index: 0;">
 </div>
 
-<div style="position: fixed; top: -4px; right: 50%; width: 120px;">
+<div id="calender" style="position: fixed; top: -4px; right: 50%; width: 100px;">
     <input type="date" name="date" id="date" value=""/>
 </div>
 
